# deva

./: .gitignore  .replit  QUICK_START.md  README.md  app.py  download_kaggle_datasets.py  download_medical_images.py  forms.py  kaggle_utils.py  main.py  model_utils.py  models.py  prepare_dataset.py  prepare_kaggle_data.py  prepare_static_samples.py  prepare_test_samples.py  pyproject.toml  retrain_model.py  run_training.py  setup.py  setup_project_structure.py  test_model.py  test_model_performance.py  train_model.py  train_subset.py  utils.py  xai_utils.py
attached_assets/: Pasted--Prompt-for-AI-Powered-Flask-Web-Application-Development-Create-a-comprehensive-design-and-im-1746680881166.txt  Pasted--resource-c-Users-hpatil-Downloads-love-TextTranslator-1-TextTranslator-templates-doctors-1746696772983.txt  Pasted-Test-the-Leprosy-detection-web-application-by-analyzing-15-negative-healthy-skin-and-15-positive--1746685244143.txt
model/: README.md  leprosy_classifier.pkl  leprosy_classifier_meta.pkl
static/css/: custom.css  main.css
static/js/: main.js
templates/: base.html  dashboard.html  doctors.html  error.html  history.html  index.html  login.html  register.html  result.html  samples.html  upload.html
